<resources>
    <string name="app_name">Kotlearn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kotlearn</string>
    <string name="nav_header_subtitle">by Fabian Lim and Victor Yeo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_basic__syntax">Basic_Syntax</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_intro_hello_world">Introduction - HelloWorld</string>
    <string name="title_activity_intro_variables_basic_types">Introduction - Variables and Basic Types</string>
    <string name="title_activity_intro2_variables_basic_types">Introduction - Variables and BasicTypes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_intro6_basic_io">Intro6BasicIO</string>
    <string name="title_activity_intro">Intro</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="introhometv">Welcome to Kotlearn!</string>


    <!--Buttons on Learn Through Video-->
    <string name="introtokotlin">Introduction to Kotlin</string>
    <string name="gettingstarted">Getting Started</string>
    <string name="basics">Basics</string>
    <string name="classesandobjects">Classes and Objects</string>
    <string name="functionsandlambdas">Functions and Lambdas</string>
    <string name="others">Others</string>
    <string name="vidfragtvtitle">Learn Kotlin through Videos!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnSend">Send</string>
    <string name="loginPage">New User? Fill in the fields and select Register!</string>

    <!-- Facebook Token -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
